--- a/skin/frontend/cc01/default/css/styles.css
+++ b/skin/frontend/cc01/default/css/styles.css
@@ -3164,9 +3164,11 @@ body {
  * ============================================ */
 @media only screen and (min-width: 771px) {
   .page-header {
-    max-width: 1260px;
-    margin: 0 auto;
+    max-width: none;
+
+/*  margin: 0 auto; 
     padding: 0 30px;
+    max-width: 1260px; */
   }
 
   .page-header-container {
@@ -3576,7 +3578,7 @@ a.skip-link {
   }
   .nav-primary a:hover,
   .nav-primary li:hover > a {
-    color: #3399cc;
+    color: #dd0025;
   }
   .nav-primary .menu-active {
     z-index: 200;
