--- a/skin/frontend/cc01/default/css/styles.css
+++ b/skin/frontend/cc01/default/css/styles.css
@@ -4729,7 +4729,7 @@ p.product-name a:hover {
   font-weight: normal;
   margin-bottom: 0px;
   padding: 7px 10px 7px 24px;
-  border-width: 1px;
+  border-width: 1px 0px 1px 0px;
   border-style: solid;
   border-color: #cccccc;
   position: relative;
@@ -4751,14 +4751,14 @@ p.product-name a:hover {
   margin-top: -3px;
 }
 .block-layered-nav .block-content > dl > dt:hover {
-  background-color: #ececec;
+  background-color: #ffffff;
 }
 .block-layered-nav .block-content > dl > dd {
   padding: 10px;
   margin: 0;
   border-width: 0 1px;
   border-style: solid;
-  border-color: #cccccc;
+  border-color: #ffffff;
 }
 .block-layered-nav .block-content > dl > dd:last-child {
   border-width: 0 1px 1px 1px;
