--- a/app/design/frontend/cc01/default/template/page/html/topmenu.phtml
+++ b/app/design/frontend/cc01/default/template/page/html/topmenu.phtml
@@ -38,14 +38,11 @@
         <ol class="nav-primary">
             <?php echo $_menu ?>
             <li class="level0 nav-5">
-                <a class="level0 " href="<?php echo $this->getUrl('wishlist')?>"><?php echo $this->__('FAVORITOS') ?>
-<?php
-    /** 
-     * Coracao do menu favoritos  
-     <div class="favorite-heart">
-        <img src="<?php echo $this->getSkinUrl('images/heartfav.png') ?>" alt="" border="0"/>
-     </div>
-    **/ ?>
+                <a class="fav-heart"><img src="<?php echo $this->getSkinUrl('images/heartfav.png') ?>" alt="" border="0"/>
+   
+                <span class="level0 " href="<?php echo $this->getUrl('wishlist')?>"><?php echo $this->__('FAVORITOS') ?> </span>
+  
+    
                     
                 </a>
             </li>
