--- a/app/design/frontend/cc01/default/layout/cms.xml
+++ b/app/design/frontend/cc01/default/layout/cms.xml
@@ -33,11 +33,11 @@ Default layout, loads most of the pages
     <default>
         <reference name="footer">
             
-            <block type="cms/block" name="footer_links_products" before="footer_links">
+            <block type="cms/block" name="footer_links_products">
                 <action method="setBlockId"><block_id>footer_links_products</block_id></action>
             </block>
             
-            <block type="cms/block" name="cms_footer_links" before="footer_links" >
+            <block type="cms/block" name="cms_footer_links" >
                 <!--
                     The content of this block is taken from the database by its block_id.
                     You can manage it in admin CMS -> Static Blocks
@@ -45,7 +45,7 @@ Default layout, loads most of the pages
                 <action method="setBlockId"><block_id>footer_links_company</block_id></action>
             </block>
             
-            <block type="cms/block" name="footer_links_quick" before="footer_links">
+            <block type="cms/block" name="footer_links_quick">
                 <action method="setBlockId"><block_id>footer_links_quick</block_id></action>
             </block>
             
